kubernetes/components/pihole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      url: "http://pihole-web.pihole.svc.cluster.local/admin"
      interval: 60s
      conditions:
        - "[STATUS] == 200"
    homarr.dev/enabled: "true"
    homarr.dev/category: "Homelab Components"
    homarr.dev/name: "Pi-hole"
    homarr.dev/url: "https://pihole.${LOCAL_DOMAIN}"
    homarr.dev/icon: "pi-hole"
    homarr.dev/ping-url: "http://pihole-web.pihole.svc.cluster.local/admin"
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: web
  - name: traefik-gateway
    namespace: traefik
    sectionName: websecure
  hostnames:
  - "pihole.${LOCAL_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pihole-web
      port: 80
